# degradAi

./: .amlignore  .gitignore  CHANGELOG.md  Dockerfile  act.secrets  api.Dockerfile  degrade-Degradant-classification-annotations.json  docker-compose.yml  pyproject.toml  run_workflow.sh  setup_credentials.sh
.github/workflows/: ci.yml  ml-pipeline.yml
app/: images.py  main.py  model.py  preprocessing.py  splitter.py  training.py
app/routers/: infer.py
app/schemas/: response.py
app/tests/: test_image_loader.py
tests/integration/: test_infer.py
tests/unit/: test_image_loader.py
train/: azureml_run_download_model.py  azureml_run_pipeline.py  dataset-degradai.yml  dataset-labels.yml  dataset.py  extraction_dataset.py  run_download_labels.py  run_download_labels.sh  run_download_model.sh  run_upload_images.sh  setup_AzureML.sh
train/label_split_data/: command.py  command.yaml
train/output/: command.yaml
train/preprocess/: command.py  command.yaml  directory_hash.py
train/test/: command.yaml
train/train/: command.py  command.yaml
webapp/: package.json
webapp/src/: App.jsx  main.jsx  pdf.js
