[tool.poetry]
name = "degradai"
version = "0.1.0"
description = ""
authors = ["patacoing <romain.lefebvre1104@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pytest = "^8.3.3"
scikit-learn = "^1.5.2"
keras = "^3.6.0"
ecotag-sdk = "^0.1.2"
tensorflow-macos = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
